# valuia

./: .gitignore  notes  notes.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  pylint-concordia.yml  pylint-examples.yml  pypi-publish.yml  pytype-concordia.yml  pytype-examples.yml  scorecards-analysis.yml  sdist-test.yml  test-concordia.yml  test-examples.yml
concordia/agents/: basic_agent.py
concordia/components/agent/: observation.py  self_perception.py
concordia/document/: interactive_document.py
concordia/environment/: game_master.py
concordia/environment/scenes/: conversation.py
concordia/language_model/: gpt_model.py  local_llama3_model.py
concordia/typing/: agent.py
concordia/utils/: interaction_collector.py
examples/: three_key_questions.ipynb
ip_figures/: README.md  database.py  ip_figure.ipynb  server.py
ip_figures/interaction_database/: Donald Trump.csv  Donald Trump.json  Donald_Trump.json  Joe Biden.csv  Joe Biden.json  Joe_Biden.json
